<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">View all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search...</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_bar_home_description">Navigate home</string>
    <string name="action_bar_home_description_format">%1$s, %2$s</string>
    <string name="action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="action_bar_up_description">Navigate up</string>
    <string name="nubia_app_name">Nubia Common Resources</string>
    <string name="nubia_back_button_label">Back</string>
    <string name="nubia_capital_off">OFF</string>
    <string name="nubia_capital_on">ON</string>
    <string name="nubia_common_label">nubia</string>
    <string name="nubia_common_versionName">V6.0.3</string>
    <string name="nubia_date_day">day</string>
    <string name="nubia_date_month">month</string>
    <string name="nubia_date_year">year</string>
    <string name="nubia_download">download</string>
    <string name="nubia_eight">8</string>
    <string name="nubia_empty_message">Empty content</string>
    <string name="nubia_five">5</string>
    <string name="nubia_four">4</string>
    <string name="nubia_leap">leap</string>
    <string name="nubia_lunar">Lunar Calendar</string>
    <string name="nubia_lunar_eleventh_month">Lunar November</string>
    <string name="nubia_lunar_first_day">First</string>
    <string name="nubia_lunar_first_month">Lunar January</string>
    <string name="nubia_lunar_twelveth_month">Lunar December</string>
    <string name="nubia_lunar_twentieth_day">twenty</string>
    <string name="nubia_more_popup_text">Cancel</string>
    <string name="nubia_next_button_label">Next</string>
    <string name="nubia_nine">9</string>
    <string name="nubia_notification_hour_time">%d hours ago</string>
    <string name="nubia_notification_hours_minutes_time">%d hours and %d minutes ago</string>
    <string name="nubia_notification_hours_one_minute_time">%d hours and 1 minute ago</string>
    <string name="nubia_notification_minutes_time">%d minutes ago</string>
    <string name="nubia_notification_one_hours_minutes_time">A hour and %d minutes ago</string>
    <string name="nubia_notification_time_just_now">Just now</string>
    <string name="nubia_notification_time_one_hour">A hour ago</string>
    <string name="nubia_notification_time_one_hour_one_minute">A hour and 1 minute ago</string>
    <string name="nubia_notification_time_one_minute">A minute ago</string>
    <string name="nubia_one">1</string>
    <string name="nubia_searchview_description_clear">Clear query</string>
    <string name="nubia_searchview_description_submit">Submit query</string>
    <string name="nubia_searchview_description_voice">Voice search</string>
    <string name="nubia_select">Select</string>
    <string name="nubia_setting_date">Set date</string>
    <string name="nubia_seven">7</string>
    <string name="nubia_six">6</string>
    <string name="nubia_skip_button_label">Skip</string>
    <string name="nubia_ten">10</string>
    <string name="nubia_text_copied">Text copied to clipboard.</string>
    <string name="nubia_text_pastelist">Clipboard</string>
    <string name="nubia_three">3</string>
    <string name="nubia_time_am">AM</string>
    <string name="nubia_time_am_upper">AM</string>
    <string name="nubia_time_hour">H</string>
    <string name="nubia_time_minute">M</string>
    <string name="nubia_time_picker_dialog_title">Set time</string>
    <string name="nubia_time_pm">PM</string>
    <string name="nubia_time_pm_upper">PM</string>
    <string name="nubia_total_text">a total of %s</string>
    <string name="nubia_two">2</string>
    <string name="nubia_week">week</string>
    <string name="nubia_zero">0</string>
    <string name="nubia_select_all">Select All</string>
    <string name="nubia_select_none">Select None</string>
    <string name="add_game">Add Games</string>
    <string name="add_game_title">Add Games</string>
    <string name="add_shortcut_ok">Icons have been added to the desktop</string>
    <string name="add_shortcut_tips">Click to add the game space icon to the desktop</string>
    <string name="added_games"> added</string>
    <string name="aim_helper">Aiming assist</string>
    <string name="all_select">Select all</string>
    <string name="app_name">Game SpaceX</string>
    <string name="astophere_apply">apply</string>
    <string name="astophere_apply_success">astophere map has been applied</string>
    <string name="astophere_cancel">cancel</string>
    <string name="astophere_gallery">gallery</string>
    <string name="auto">Auto</string>
    <string name="cancel">Cancel</string>
    <string name="classic_masterpiece">Classic games</string>
    <string name="color">Colour</string>
    <string name="confirm">OK</string>
    <string name="connecting">Connecting</string>
    <string name="cta_confirm">Agree</string>
    <string name="cta_deny">Exit</string>
    <string name="cta_message">Welcome to Red Magic Game Controller. In order to provide you better service, the app requires the following permissions during the process of use:\10 1. Access your location information, including approximate location and accurate location.\10 2. Access your bluetooth information，including opening bluetooth,connection bluetooth,cancel pairing.\10\10By clicking Agree, you have agreed to the above contents.</string>
    <string name="cta_message_home">Welcome to GameSpace. In order to provide you better service, the app requires the following permissions during the process of use:\10 1. Access your location information, including approximate location and accurate location;\10 2.In the process of using the software, we need to obtain full network access, including mobile data and WLAN network, the traffic charges generated by the operator directly charged, the details of the operators you belong to.\10\10 By clicking Agree, you have agreed to the above contents.</string>
    <string name="cta_title">Service Descriptions</string>
    <string name="downloading">Downloading</string>
    <string name="exit_cancel">Cancel</string>
    <string name="exit_ok">Quit</string>
    <string name="exit_tips">Are you sure you want to quit?</string>
    <string name="game_search">Search...</string>
    <string name="game_space_function_head">Shoulder Triggers descriptions</string>
    <string name="game_space_function_string_slide0">Customize L/R button according to the game interface</string>
    <string name="game_space_function_string_slide1">Quickly turn on Control Center</string>
    <string name="game_space_function_string_slide2">PUBG game: it\'s recommended to correspond L button to the Shoot button and R button to the Aim button</string>
    <string name="game_space_function_string_slide2_sub">(To set the key position in the game or training ground is recommended)</string>
    <string name="game_space_function_string_slide3">MOBA game: it\'s recommended to correspond L button to the Shop button and R button to the Summoner Spells button</string>
    <string name="game_space_function_string_slide3_sub">(To set the key position in the game is recommended)</string>
    <string name="game_space_function_string_slide_inter_0">Quickly turn on Control Center</string>
    <string name="game_space_function_string_slide_inter_1">Customize L/R button according to the game interface</string>
    <string name="game_space_start_game">start Setting</string>
    <string name="game_state">Game Status</string>
    <string name="game_state_best">Reached the best conditions</string>
    <string name="game_state_clean_memory">Cleaned memory</string>
    <string name="game_state_cleaning">Cleaning...</string>
    <string name="game_time">Duration of Game</string>
    <string name="game_time_weekly_message">Weekly Health Report on Game duration generated, please go to check it</string>
    <string name="game_time_weekly_positive">Check</string>
    <string name="gamecenter_not_fonund_dialog">Please go to neoStore to download Game Center before using the function.</string>
    <string name="gamekeys_lamp_a">Aurora band</string>
    <string name="gamekeys_lamp_b">Interstellar belt</string>
    <string name="gamekeys_lamp_c">Skyline</string>
    <string name="gamekeys_lamp_d">Rainbow ribbon</string>
    <string name="gamekeys_lamp_e">Laserwave</string>
    <string name="gamekeys_lamp_f">Bottom rhythm</string>
    <string name="gamekeys_lamp_g">Central rhythm</string>
    <string name="gamekeys_lamp_h">Rhythmic LED effects</string>
    <string name="gamekeys_lamp_normal">RGB LED Strip</string>
    <string name="gamekeys_phone_message">Enabling this function can bar Call,SMS,QQ/WeChat Video Call and Voice Call to avoid game being interrupted.</string>
    <string name="gamemode_network_acceleration_in_use">Accelerating</string>
    <string name="gamemode_network_acceleration_no_open">Disabled</string>
    <string name="gametime_overtime_message">You have played games more than 6 hours today. Please have some rest and arrange your game time reasonably.</string>
    <string name="guild_page1_text">Dedicated game space, give you console like gaming experiences</string>
    <string name="guild_page2_text">Top Shoulder Triggers, helping you win the game easily</string>
    <string name="guild_page3_text">Smart game acceleration, Take advantage in the competitive world</string>
    <string name="handle_calibration_button">Controller calibration</string>
    <string name="handle_calibration_complete">Controller calibrated</string>
    <string name="handle_calibration_countdown">Please click the LB/RB button on the Controller to start calibrating within 60 seconds. Do not operate the stick to avoid the failure of calibration(</string>
    <string name="handle_calibration_title">Controller calibration</string>
    <string name="handle_cancel_pair_button">Unpair</string>
    <string name="handle_choose_connect">Select the Controller you want to connect</string>
    <string name="handle_connect_button">Connect</string>
    <string name="handle_connecting">Connecting…</string>
    <string name="handle_connecting_fail">Connection failed, please try again</string>
    <string name="handle_left_right_calibration">L/R Calibration</string>
    <string name="handle_one_button_text">Controller 1</string>
    <string name="handle_two_button_text">Controller 2</string>
    <string name="manual">Manual</string>
    <string name="mode_cooling_fan">Cooling fan</string>
    <string name="mode_no_disturb">Block msgs</string>
    <string name="mode_shield_phone">Block calls</string>
    <string name="off">Shut down</string>
    <string name="on">Startup</string>
    <string name="open_mode">Startup method</string>
    <string name="size">Size</string>
    <string name="style">Style</string>
    <string name="tip_auto">Auto on when enter game</string>
</resources>