<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="10sp" android:textColor="@color/text_color_btn" android:gravity="center" android:id="@+id/shieldphone_text80" android:background="@mipmap/btn_normal80" android:paddingBottom="3.5dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="9.33dp" android:text="@string/mode_shield_phone" android:layout_marginStart="28dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView android:textSize="10sp" android:textColor="@color/text_color_btn" android:gravity="center" android:id="@+id/cooling_fan_text80" android:background="@mipmap/btn_normal80" android:paddingBottom="3.5dp" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="9.33dp" android:text="@string/mode_cooling_fan" android:layout_marginStart="28dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView android:textSize="10sp" android:textColor="@color/text_color_btn" android:gravity="center" android:id="@+id/led_effect_text80" android:background="@mipmap/btn_normal80" android:paddingBottom="3.5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="9.33dp" android:text="@string/gamekeys_lamp_normal" android:layout_marginEnd="28dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent"/>
    <TextView android:textSize="10sp" android:textColor="@color/text_color_btn" android:gravity="center" android:id="@+id/no_disturb_text80" android:background="@mipmap/btn_normal80" android:paddingBottom="3.5dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="9.33dp" android:text="@string/mode_no_disturb" android:layout_marginEnd="28dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent"/>
</merge>
