<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:layout_gravity="center_horizontal" android:id="@+id/gamespace_slide3" android:background="@drawable/gamespace_key_help_3" android:layout_width="wrap_content" android:layout_height="208dp" android:layout_marginTop="26dp"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="@dimen/key_help_text_size" android:textColor="@color/gamespace_title_color" android:layout_gravity="center_horizontal" android:id="@+id/tail_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/game_space_function_string_slide3"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="@dimen/key_help_text_sub_size" android:textColor="@color/gamespace_title_color_sub" android:layout_gravity="center_horizontal" android:id="@+id/tail_text_sub" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/game_space_function_string_slide3_sub"/>
    <Button android:textAppearance="?android:attr/textAppearanceMedium" android:buttonStyle="@style/Widget.Nubia.Button" android:textSize="14dp" android:textColor="@color/gamespace_title_color" android:layout_gravity="center_horizontal" android:id="@+id/start_setting" android:background="@drawable/start_settings_button_selector" android:layout_width="148dp" android:layout_height="34dp" android:layout_marginTop="14dp" android:text="@string/game_space_start_game"/>
</LinearLayout>
