<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/gamespace_background_color" android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/game_actionbar_titlebar_layout"/>
    <ImageView android:id="@+id/handle_tag_bg_img" android:background="@drawable/handle_tag_bg" android:visibility="gone" android:layout_width="100dp" android:layout_height="200dp" android:layout_marginLeft="50dp" android:layout_marginTop="70dp"/>
    <TextView android:textSize="12sp" android:textColor="@color/handle_white" android:gravity="center" android:id="@+id/handle_one_button" android:background="@drawable/handle_state_bg" android:paddingTop="14dp" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginLeft="50dp" android:layout_marginTop="70dp" android:text="@string/handle_one_button_text" android:drawableTop="@drawable/handle_left_icon"/>
    <TextView android:textSize="12sp" android:textColor="@color/handle_white" android:gravity="center" android:id="@+id/handle_two_button" android:background="@drawable/handle_state_bg" android:paddingTop="14dp" android:visibility="invisible" android:layout_width="100dp" android:layout_height="100dp" android:text="@string/handle_two_button_text" android:drawableTop="@drawable/handle_right_icon" android:layout_below="@+id/handle_one_button" android:layout_alignLeft="@+id/handle_one_button" android:alpha="0.5"/>
    <TextView android:textSize="12sp" android:textColor="@color/handle_white" android:gravity="center" android:id="@+id/handle_left_right_btn" android:background="@drawable/calibration_button_selector" android:visibility="invisible" android:layout_width="100dp" android:layout_height="34dp" android:layout_marginLeft="50dp" android:layout_marginTop="6dp" android:text="@string/handle_left_right_calibration" android:drawableTop="@null" android:layout_below="@+id/handle_two_button" android:alpha="0.85"/>
    <include layout="@layout/redmagic_double_handle_three_view_1"/>
    <include layout="@layout/redmagic_double_handle_three_view_2"/>
</RelativeLayout>
