<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <cn.nubia.commonui.widget.WheelView android:id="@+id/nubia_year_spinner" android:layout_width="@dimen/nubia_wheel_width" android:layout_height="wrap_content" android:layout_marginEnd="0dp"/>
        <cn.nubia.commonui.widget.WheelView android:id="@+id/nubia_month_spinner" android:layout_width="@dimen/nubia_wheel_width" android:layout_height="wrap_content" android:layout_toEndOf="@+id/nubia_year_spinner"/>
        <cn.nubia.commonui.widget.WheelView android:id="@+id/nubia_day_spinner" android:layout_width="@dimen/nubia_wheel_width" android:layout_height="wrap_content" android:layout_marginStart="0dp" android:layout_toEndOf="@+id/nubia_month_spinner"/>
        <TextView android:textSize="12dp" android:textColor="?android:attr/textColorPrimary" android:id="@+id/nubia_year_label" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nubia_date_year" android:singleLine="true" android:layout_centerVertical="true" android:layout_marginStart="-18dp" android:layout_toEndOf="@+id/nubia_year_spinner"/>
        <TextView android:textSize="12dp" android:textColor="?android:attr/textColorPrimary" android:id="@+id/nubia_month_label" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nubia_date_month" android:singleLine="true" android:layout_centerVertical="true" android:layout_marginStart="-30dp" android:layout_toEndOf="@+id/nubia_month_spinner"/>
        <TextView android:textSize="12dp" android:textColor="?android:attr/textColorPrimary" android:id="@+id/nubia_day_label" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nubia_date_day" android:singleLine="true" android:layout_centerVertical="true" android:layout_marginStart="-30dp" android:layout_toEndOf="@+id/nubia_day_spinner"/>
    </RelativeLayout>
</FrameLayout>
