<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_gravity="center_vertical" android:id="@+id/nubia_search_button" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@android:string/search_go" style="?android:attr/actionButtonStyle"/>
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/nubia_search_edit_frame" android:layout_width="match_parent" android:layout_height="@dimen/nubia_search_view_edittext_height"/>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/nubia_search_mag_icon" android:visibility="visible" android:layout_width="@dimen/nubia_dropdownitem_icon_width" android:layout_height="wrap_content" android:scaleType="centerInside" android:layout_marginStart="@dimen/nubia_dropdownitem_text_padding_left"/>
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/nubia_search_plate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
                <EditText android:textSize="@dimen/nubia_search_view_fake_text_size" android:ellipsize="end" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_gravity="bottom" android:id="@+id/nubia_search_src_text" android:background="@drawable/nubia_search_edit_text_material" android:layout_width="0dp" android:layout_height="match_parent" android:minWidth="@dimen/nubia_search_view_text_min_width" android:singleLine="true" android:layout_weight="1" android:inputType="none|text|textAutoComplete|textNoSuggestions" android:dropDownAnchor="@+id/nubia_search_edit_frame" android:imeOptions="actionSearch" android:dropDownHeight="wrap_content" android:dropDownHorizontalOffset="0dp" android:dropDownVerticalOffset="0dp" android:paddingEnd="@dimen/nubia_dropdownitem_text_padding_right"/>
                <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="center" android:layout_gravity="center" android:id="@+id/nubia_total" android:background="@null" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:paddingStart="4dp" android:paddingEnd="7dp"/>
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/nubia_search_close_btn" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/nubia_searchview_description_clear" android:paddingEnd="8dp"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/nubia_submit_area" android:layout_width="wrap_content" android:layout_height="match_parent">
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/nubia_search_go_btn" android:background="?android:attr/selectableItemBackgroundBorderless" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/nubia_searchview_description_submit" android:paddingStart="16dp" android:paddingEnd="16dp"/>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/nubia_cancel_area" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/nubia_search_cancel_divider" android:background="@drawable/nubia_search_cancel_divider" android:layout_width="@dimen/nubia_search_view_cancel_divider_width" android:layout_height="@dimen/nubia_search_view_cancel_divider_height"/>
                <TextView android:textSize="@dimen/nubia_search_view_canceltext_size" android:textColor="@color/nubia_search_view_cancel_text_color" android:layout_gravity="center_vertical" android:id="@+id/nubia_search_cancel_text" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/nubia_more_popup_text" android:paddingStart="@dimen/nubia_dropdownitem_text_padding_left" android:paddingEnd="@dimen/nubia_search_view_canceltext_padding_right"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
